<resources>
    <string name="app_name">Cadê a Lista?</string>
    <string name="delete_all_items_completed_dialog_title">Confirmar Exclusão</string>
    <string name="delete_all_items_completed_dialog_body_message">Você realmente quer excluir todos os itens completados?</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>
    <string name="textview_title_edit_list">Edite sua Lista</string>
    <string name="textview_title_edit_item">Edite seu Item</string>
    <string name="toolbar_title_edit">Edite seu Item</string>
    <string name="toolbar_title_edit_list">Edite sua Lista</string>
    <string name="textview_description_edit">Escolha o nome e a descriçao</string>
    <string name="textview_description_edit_item">Escolha o nome, quantidade e preço</string>
    <string name="add_item">Informações do Item</string>
    <string name="add_list">Escolha o nome e a descrição da Lista</string>
    <string name="toolbar_title_add">Adicionar</string>
    <string name="edit_text_hint_name">*Nome do Item</string>
    <string name="edit_text_hint_name_list">*Nome da Lista</string>
    <string name="edit_text_hint_quantity">Quantidade do Item</string>
    <string name="edit_text_hint_price">Preço por und.</string>
    <string name="edit_text_hint_description">Descrição</string>
    <string name="total_market">Valor Total</string>
    <string name="delete_all_completed">Excluir itens marcados</string>
    <string name="show_completed_item">Exibir apenas itens marcados</string>
    <string name="search_title_menu">Buscar</string>
    <string name="edit_title">Editar</string>
    <string name="delete_title">Excluir</string>
    <string name="value_real">R$ 0,00</string>
<!--    <string name="ad_id_test">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="ad_id">ca-app-pub-1398509773631594/6113438086</string>-->
    <string name="ad_id_test">ca-app-pub-1398509773631594/6113438086</string>
    <string name="toast_required">Preencha os campos obrigatórios</string>
    <string name="required_text">Campo Obrigatório</string>
    <string name="insert_name_helper">Insira um nome</string>
    <string name="show_all_item">Exibir todos os itens</string>
    <string name="duplicate">Duplicar</string>
    <string name="crie_seu_primeiro_item_clicando_no_bot_o">Crie seu primeiro item clicando no botão +</string>
    <string name="crie_sua_primeira_lista_clicando_no_bot_o">Crie sua primeira lista clicando no botão +</string>
    <string name="show_value_all_items">Exibir valor de todos os itens</string>
    <string name="show_value_check_items">Exibir valor apenas dos itens marcados</string>
    <string name="total_value">Valor total</string>
    <string name="total_value_checked_items">Valor total dos itens marcados</string>
    <string name="error_when_exported">ERRO AO EXPORTAR DADO</string>
    <string name="your_list_title">Suas Listas</string>
    <string name="share">Compartilhar</string>
</resources>