<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_title_menu"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item android:id="@+id/action_delete_all_completed_item"
        android:title="@string/delete_all_completed"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_show_completed_item"
        android:title="@string/show_completed_item"
        android:icon="@drawable/ic_baseline_price_check_24"
        app:showAsAction="always|collapseActionView"
        />

</menu>