<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_item_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="1dp">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_item_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_item_edit"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/toolbar_title_add"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
                />

        </com.google.android.material.appbar.AppBarLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewTitle_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_view_item_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/add_item"/>

<!--    <TextView-->
<!--        android:id="@+id/textViewDescription_edit"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_edit"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="10dp"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="15sp"-->
<!--        android:textAlignment="center"-->
<!--        android:text="@string/textview_description_edit_item"/>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEditTextName_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_edit"
        android:layout_margin="20dp"
        app:startIconDrawable="@drawable/ic_baseline_short_text_24"
        app:endIconMode="clear_text"
        app:helperText="@string/required_text"
        app:helperTextTextColor="@color/red"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEditTextQuantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEditTextName_edit"
        android:layout_margin="20dp"
        app:startIconDrawable="@drawable/ic_baseline_shopping_cart_24"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextQuantity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_quantity"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEditTextPrice_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEditTextQuantity_edit"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        app:endIconMode="clear_text"
        app:prefixText="R$ ">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPrice_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/edit_text_hint_price"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

    <!-- ca-app-pub-3940256099942544/6300978111 -->
    <!-- ca-app-pub-1398509773631594/6113438086 -->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_item_list_add_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_test"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adView_item_list_add_edit"
        android:src="@drawable/ic_baseline_check_24"
        android:backgroundTint="#40B629"
        app:backgroundTint="@color/white"
        android:layout_margin="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>