<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

<ScrollView
    android:id="@+id/scrollview_add_edit_screen_list"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_list_screen_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="1dp">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_list_screen_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Toolbar.">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_list_screen_edit"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/toolbar_title_add"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:titleTextColor="@color/white"
                app:navigationIconTint="@color/white"
                app:titleCentered="true"
                />

        </com.google.android.material.appbar.AppBarLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_view_title_add_edit_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_view_list_screen_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:text="@string/add_list"/>

<!--    <TextView-->
<!--        android:id="@+id/text_view_description_add_edit_list"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/text_view_title_add_edit_list"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="10dp"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="15sp"-->
<!--        android:textAlignment="center"-->
<!--        android:text="@string/textview_description_edit"/>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name_screen_add_edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title_add_edit_list"
        android:layout_margin="20dp"
        app:startIconDrawable="@drawable/ic_baseline_text_description"
        app:endIconMode="clear_text"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name_screen_add_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description_screen_add_edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_name_screen_add_edit_list"
        app:layout_constraintBottom_toTopOf="@+id/adView_add_screen"
        android:layout_margin="20dp"
        app:startIconDrawable="@drawable/ic_baseline_short_text_24"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_description_screen_add_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_description"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_add_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/ad_id_test"
        android:layout_marginTop="50dp"
        ads:layout_constraintTop_toBottomOf="@+id/text_input_description_screen_add_edit_list"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_save_screen_add_edit_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#4FAAA2"
        app:backgroundTint="@color/white"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>