<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.items.ItemFragment"
    android:fitsSystemWindows="true"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="1dp">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Toolbar.">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_fragment_item"
                app:title="Itens"
                app:titleCentered="true"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:titleTextColor="@color/white"
                app:navigationIconTint="@color/white"
                />

    </com.google.android.material.appbar.AppBarLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerFragmentList"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFragmentList"
        android:layout_marginTop="10dp"
        app:dividerColor="#F1F1F1"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewFragmentList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="2dp"
        android:layout_margin="15dp"
        android:backgroundTint="#168F84"
        style="@style/Widget.Material3.CardView.Elevated"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/texviewTitleTotalCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/total_market"/>

        <TextView
            android:id="@+id/textviewTotalValueCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/texviewTitleTotalCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/value_real"
            android:maxLines="1"
            android:ellipsize="end"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerFragmentList"
            app:layout_constraintBottom_toTopOf="@+id/adView_items"
            tools:listitem="@layout/item_list" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/ad_id_test"
        android:layout_marginTop="20dp"
        ads:layout_constraintTop_toBottomOf="@+id/recycler_view_list"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/icon_background_item_screen"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFragmentList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:alpha="0"
        android:src="@drawable/icon_cade_a_lista_transparent"/>

    <TextView
        android:id="@+id/text_background_item_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/icon_background_item_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textAlignment="center"
        android:alpha="0"
        android:text="@string/crie_seu_primeiro_item_clicando_no_bot_o"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="#4FAAA2"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>